--- a/P1/style.css
+++ b/P1/style.css
@@ -3,15 +3,28 @@
 }
 
 .carta{
-    border-color: black;
-    border-style: solid;
-    border-radius: 25px;
-    max-width: 1080px;
-    margin: auto;
+    margin: 10px;
+    border: 5px solid #000000;
+    float: left;
+    max-width: 540px;
     background-color: rgb(153, 117, 17);
-    
+    max-height: 350px;
 }
 
-.halcon{
-    
+figure img {
+    width: 100%;
+    height: 100%;
+}
+
+figure{
+    max-height: 260px;
+}
+
+img:hover {
+    border: 5px solid #777;
+}
+
+.nombre {
+    padding: 15px;
+    text-align: center;
 }
