--- a/P1/style.css
+++ b/P1/style.css
@@ -47,3 +47,41 @@ img:hover {
     padding: 15px;
     text-align: center;
 }
+
+.btn {
+    background-color: black; /* Fondo negro */
+    border: 2px solid #333;
+    font-size: 16px;
+    padding: 10px 20px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    color: white; /* Color de texto por defecto */
+}
+
+.btn::before, .btn::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #007bff;
+    transition: width 0.3s ease-in-out; /* Hacer la transición más lenta */
+}
+
+.btn::before {
+    top: 0;
+    left: 0;
+}
+
+.btn::after {
+    bottom: 0;
+    right: 0;
+}
+
+.btn:hover::before {
+    width: 100%; /* Aparecer desde la izquierda */
+}
+
+.btn:hover::after {
+    width: 100%; /* Aparecer desde la derecha */
+}
