--- a/P1/style.css
+++ b/P1/style.css
@@ -7,6 +7,11 @@ html{
     background-position: center;
 }
 
+body{
+    width: 100%;
+    height: 100%;
+}
+
 @font-face{
     font-family: "jabba";
     src: url("jabba.ttf");
@@ -19,6 +24,7 @@ html{
 
 .contenedor{
     display: flex;
+    margin-top: 5%;
 }
 
 .carta{
@@ -49,6 +55,7 @@ img:hover {
 }
 
 .btn {
+    text-decoration: none;
     background-color: black; /* Fondo negro */
     border: 2px solid #333;
     font-size: 16px;
