--- a/P1/style.css
+++ b/P1/style.css
@@ -5,6 +5,7 @@ html{
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center;
+    
 }
 
 body{
@@ -25,6 +26,7 @@ body{
 .contenedor{
     display: flex;
     margin-top: 5%;
+    justify-content: center;
 }
 
 .carta{
@@ -32,7 +34,10 @@ body{
     border: 5px solid #000000;
     max-width: 580px;
     background-image: url(imagenes/chapa1.jpg);
-    max-height: 350px;
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    max-height: auto;
 }
 
 figure img {
@@ -44,7 +49,7 @@ figure{
     max-height: 260px;
 }
 
-img:hover {
+#imagen:hover {
     border: 5px solid #777;
 }
 
@@ -54,7 +59,19 @@ img:hover {
     text-align: center;
 }
 
+.descripcion {
+    padding: 15px;
+    text-align: center;
+    float: center;
+}
+
+.botones{
+    display: flex;
+    margin: 13px;
+}
+
 .btn {
+    margin: 5px;
     text-decoration: none;
     background-color: black; /* Fondo negro */
     border: 2px solid #333;
