--- a/P3/login.css
+++ b/P3/login.css
@@ -1,8 +1,25 @@
+html{
+    width: 100%;
+    height: 100%;
+    background-image: url(/Jaawa.webp);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;  
+} 
+
+@font-face{
+    font-family: "jabba";
+    src: url("jabba.ttf");
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    font-family: "jabba";
     margin: 0;
     padding: 0;
+    height: 100vh; /* Hace que el cuerpo ocupe toda la altura de la ventana */
+    background-image: url('jaawa.webp'); /* Ruta de la imagen de fondo */
+    background-size: cover; /* La imagen de fondo se ajusta para cubrir todo el área */
+    background-position: center; /* La imagen de fondo se centra */
 }
 
 h1, h2 {
@@ -13,7 +30,10 @@ h1, h2 {
 #login {
     width: 300px;
     margin: 20px auto;
-    background-color: #fff;
+    background-image: url(/chapa1.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
